Rename page from 'Talks' to 'Thoughts'

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Talks and presentations"
-permalink: /talks/
+title: "Thoughts"
+permalink: /thoughts/
 author_profile: true
 ---
 
